--- a/client/style.css
+++ b/client/style.css
@@ -19,8 +19,25 @@ body {
 	text-align: left;
 }
 
-.user-details {
+.label-details {
 	color : #666666;
 	text-align: right;
 	padding: 2px 10px 2px;
+}
+
+.sub-label-details {
+	color : #666666;
+	display: inline-block;
+}
+
+.modal-dialog {
+	margin-top: 100px;
+}
+
+.rmv-btm-margin {
+	margin-bottom: 0px
+}
+
+.rmv-top-margin {
+	margin-top: 0px
 }
